--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,7 @@
     <div id="root"></div>
     <div id="drawer-root"></div>
     <div id="modal-root"></div>
+    <div id="toast-root"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
